Fix launch from config file

--- a/config_file.yaml
+++ b/config_file.yaml
@@ -166,7 +166,7 @@ WTRG:
 
 
 # Tech
-HTQ:
+HPQ:
   company_name: HP INC
   path_to_save: "C:\\Users\\lucas\\OneDrive\\Bureau\\companies_analysis_2024\\tech"
 
