Fixed the compound interest error (used Adj Close instead of Close , which gave crazy results)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 beautifulsoup4==4.12.2
 dataframe_image==0.2.3
-googletrans==3.0.0
+googletrans==4.0.0rc1
 lxml==4.9.2
 matplotlib==3.7.1
 mplfinance==0.12.10b0
 numpy==1.23.5
-pandas==2.0.0
+pandas==2.2.1
 pandas_datareader==0.10.0
 Requests==2.31.0
 scikit_learn==1.2.2
@@ -15,3 +15,4 @@ statsmodels==0.13.5
 vaderSentiment==3.3.2
 webdriver_manager==4.0.1
 yfinance==0.2.18
+python-pptx==0.6.23
