--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,14 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.3.0  # Utilisez la version souhaitée de pre-commit-hooks
-  hooks:
-  - id: trailing-whitespace
+# - repo: https://github.com/pre-commit/pre-commit-hooks
+#   rev: v3.3.0  # Utilisez la version souhaitée de pre-commit-hooks
+#   hooks:
+#   # - id: trailing-whitespace
 - repo: https://github.com/psf/black
   rev: 20.8b1  # Utilisez la version souhaitée de Black
   hooks:
   - id: black
     language_version: python3.10  # Spécifiez la version de Python que vous utilisez
+    files: .
+    exclude: '\benv/.*'   # Exclure les répertoires contenant 'env/'
+    additional_dependencies: [click==7.1.2]
+    # args: [--force]
