--- a/config_files/config_file.yaml
+++ b/config_files/config_file.yaml
@@ -1,6 +1,6 @@
-SRE:
-  company_name: Sempra
-  path_to_save: "C:\\Users\\User\\Desktop\\analysis_company\\utilities"
+# SRE:
+#   company_name: Sempra
+#   path_to_save: "C:\\Users\\User\\Desktop\\analysis_company\\utilities"
 
 SVT.L:
   company_name: Severn Trent PLC
